syntax = "proto3";

package file;

service FileService {
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse) {}
  rpc GetSignedURL(GetSignedURLRequest) returns (GetSignedURLResponse) {}
}

message ImageData {
  string filename = 1;
  bytes data = 2;
}

message ImageURL {
  string url = 1;
  string filename = 2;
}

message UploadFileRequest {
  string filename = 1;
  bytes data = 2;
  string userId = 4;
}

message UploadFileResponse {
  string url = 1;
}

message GetSignedURLRequest {
  string filename = 1;
  string userId = 2;
}

message GetSignedURLResponse {
  string url = 1;
}
